packages/typ/tests/fixtures/diagnostics/0849_polyvar_duplicate_tag_conflict_09.ml.expected
File "0849_polyvar_duplicate_tag_conflict_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0849_polyvar_duplicate_tag_conflict_09 is not a valid module name.

File "0849_polyvar_duplicate_tag_conflict_09.ml", line 1, characters 15-41:
1 | let bad_iota : [ `A of int | `A of bool ] -> int =
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This variant type contains a constructor [ `A of bool ]
       which should be [ `A of int ]
